@startuml
annotation java.lang.Override
class ec.edu.espe.view.Factur
class ec.edu.espe.view.Menus
class ec.edu.espe.view.Orden
class ec.edu.espe.view.SaleNote
class java.util.ArrayList
ec.edu.espe.view.Factur ..> java.lang.Override
ec.edu.espe.view.Factur ..> java.util.ArrayList
ec.edu.espe.view.Menus ..> java.lang.Override
ec.edu.espe.view.Orden ..> java.lang.Override
ec.edu.espe.view.SaleNote ..> java.lang.Override
@enduml